--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@lai9fox/bem",
-  "version": "1.0.1",
-  "description": "css bem class generator",
+  "version": "2.0.0",
+  "description": "css bem class generator，bem 生成器",
   "main": "dist/index.js",
-    "files": [
+  "files": [
     "dist/**"
   ],
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,11 @@
   "homepage": "https://github.com/lai9fox/bem#readme",
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.50.0",
     "jest": "^29.4.3",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.1.1",
+    "typescript": "5"
   }
 }
