--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "./dist",
     "allowJs": true,
     "moduleResolution": "node",
+    "esModuleInterop": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*"]
 }
