--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lai9fox/bem",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "css bem class generator，bem 生成器",
   "main": "dist/index.js",
   "files": [
@@ -30,12 +30,11 @@
   },
   "homepage": "https://github.com/lai9fox/bem#readme",
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
-    "@typescript-eslint/parser": "^6.7.2",
-    "eslint": "^8.50.0",
-    "jest": "^29.4.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "5"
+    "@lai9fox/eslint-config": "^2.1.2",
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.25.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3"
   }
 }
